--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   .header {
     padding: 80px;
     text-align: center;
-    background: #1abc27;
+    background: #ad950e;
     color: white;
   }
   
@@ -85,7 +85,7 @@
    /* Small image */
    .smallimg {
 
-    width: 20%;
+    width: 100%;
     padding: 20px;
     
     ;
@@ -112,3 +112,14 @@
       width: 100%;
     }
   }
+
+.enlargetext h1{
+    font-weight: bold;
+    font-size: 4em;
+}
+
+.enlargetext h1:hover{
+    font-size:88px;
+    transition: all 1000ms;
+    font-size-adjust: 20px;
+}
