added education and skills

--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,26 @@
     transition: all 1000ms;
     font-size-adjust: 20px;
 }
+
+
+.div_personal h1 {
+  font-size: 35px;
+}
+
+.table table {
+  border:1px solid #b3adad;
+  border-collapse:collapse;
+  padding:5px;
+}
+.table th {
+  border:1px solid #b3adad;
+  padding:5px;
+  background: #f0f0f0;
+  color: #313030;
+}
+.table td {
+  border:1px solid #b3adad;
+  text-align:center;
+  padding:5px;
+  background: #ffffff;
+  color: #313030;
