--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,17 @@ body {
     margin-top: 150px;
   }
 }
+
+.presskit {
+
+  width: 100%;
+  height: 100%;
+  
+  ;
+} .cv {
+
+width: 100%;
+height: 100%;
+
+;
+} 
