--- a/styles.css
+++ b/styles.css
@@ -130,13 +130,24 @@ height: 100%;
 ;
 } 
 
-.navbar {
-  display: flex;
-  justify-content: center;
-  background-color: #333; /* Dark background for contrast */
-  padding: 20px; /* Spacing for breathing room */
-  border-radius: 8px; /* Rounded corners */
+.table table {
+  border:1px solid #b3adad;
+  border-collapse:collapse;
+  padding:5px;
 }
+.table th {
+  border:1px solid #b3adad;
+  padding:5px;
+  background: #f0f0f0;
+  color: #313030;
+}
+.table td {
+  border:1px solid #b3adad;
+  text-align:center;
+  padding:5px;
+  background: #ffffff;
+  color: #313030;}
+
 
 .btn_personal {
   background-color: #007bff; /* Primary color */
