--- a/styles.css
+++ b/styles.css
@@ -202,3 +202,21 @@ height: 100%;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
 }
+
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; /* Adds space between logos */
+  justify-content: space-around; /* Distributes space between logos */
+}
+
+.skill-logo {
+  width: 50px;  /* Adjust the size */
+  height: auto;
+  margin: 10px;
+  transition: transform 0.2s; /* Smooth zoom effect */
+}
+
+.skill-logo:hover {
+  transform: scale(1.2); /* Zoom effect on hover */
+}
