fix: added 10th child

--- a/styles.css
+++ b/styles.css
@@ -298,3 +298,4 @@ height: 100%;
 .skills-container img:nth-child(7) { animation-delay: 1.2s; }
 .skills-container img:nth-child(8) { animation-delay: 1.4s; }
 .skills-container img:nth-child(9) { animation-delay: 1.6s; }
+.skills-container img:nth-child(10) { animation-delay: 1.8s; }
