--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
+
 }
 
 .side {
@@ -79,6 +80,16 @@ body {
   background-color: #DAD7CD; /* Soft Stone Gray */ 
   color: #4B3F36; /* Earthy Brown text */
   padding: 20px;
+}
+
+.buttons_bar {
+  display: flex;
+  justify-content: center; /* Center the buttons horizontally */
+  align-items: center; /* Align buttons vertically */
+  gap: 10px; /* Add some spacing between the buttons */
+  padding: 20px; /* Optional: add some padding */
+  background-color: #EAE0CC; /* Optional: background color to match your palette */
+  border-radius: 5px;
 }
 
 .main {
@@ -105,7 +116,24 @@ body {
   position: relative;
   padding-left: 20px; /* Space for the custom bullet */
   color: #EAE7DC; /* Make the text a subtle blue */
+  font-family: 'Poppins', sans-serif;
 }
+
+.div_personal h5 {
+  position: relative;
+  color: #EAE7DC; /* Make the text a subtle blue */
+  font-family: 'Poppins', sans-serif;
+}
+
+.div_personal p {
+  opacity: 80%;
+  background-color: #EAE7DC; /* Make the text a subtle blue */
+  color:#4B3F36;
+  border-radius: 7px;
+  padding: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+
 
 /* Add a blue bullet point before each job title */
 .div_personal h2::before {
@@ -347,4 +375,31 @@ height: 100%;
   .skills-container {
     gap: 10px; /* Smaller gap between icons */
   }
+}
+
+.typing-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: black; }
+}
+
+#typing-effect {
+  font-family: 'Courier New', Courier, monospace; /* Monospace font for typing effect */
+  font-size: 24px;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 2px solid; /* Blinking caret */
+  width: 0;
+  animation: typing 3.5s steps(22, end), blink-caret 0.75s step-end infinite;
 }
