--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,12 @@ body {
   padding: 20px;
 }
 
+.about {
+  flex: 30%;
+  color: #4B3F36; /* Earthy Brown text */
+  text-align: justify;
+}
+
 .buttons_bar {
   display: flex;
   justify-content: center; /* Center the buttons horizontally */
@@ -132,6 +138,7 @@ body {
   border-radius: 7px;
   padding: 10px;
   font-family: 'Roboto', sans-serif;
+  text-align: justify;
 }
 
 
@@ -210,7 +217,7 @@ height: 100%;
 
 /* Table styling */
 .table table {
-  width: 100%;
+  width: 60%;
   border-collapse: collapse;
   margin: 20px 0;
   font-size: 16px; /* Reduced font size for better fit */
