chore: swap rows when shrinked

--- a/styles.css
+++ b/styles.css
@@ -153,8 +153,8 @@ body {
 .smallimg, .youtube-thumbnail {
   width: 100%;
   border-radius: 10px;
-  margin: 10px 0;
-  align-items: center;
+  margin: 10px auto; /* Centers the image horizontally */
+  display: block; 
 }
 
 .footer {
@@ -307,8 +307,9 @@ height: 100%;
     padding: 8px;
   }
   .row {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
+
 }
 
 /* Media query for mobile screens (max-width: 480px) */
