--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,7 @@ body {
 
 .buttons_bar {
   display: flex;
-  gap: 10px; /* Add some spacing between the buttons */
-  padding: 10px; /* Optional: add some padding */
+  padding: 5px 5px; /* Optional: add some padding */
   background-color: #2e4f2c6e; /* Optional: background color to match your palette */
   border-radius: 5px;
   color: #EAE7DC; /* Light Sand Beige */
@@ -102,8 +101,8 @@ body {
   transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth hover and active effect */
   
   text-decoration: none; /* Remove any text decoration like underlines */
-  padding: 10px 20px;
-  margin: 10px;
+  padding: 5px 5px;
+  margin: 5px;
 
   /* Additional reset styles to remove any unwanted appearance */
   border: none; /* Removes any default border */
@@ -297,7 +296,7 @@ height: 100%;
     flex-direction: column-reverse;
     
   }
-  .navbar, .buttons_bar{
+  .buttons_bar{
     flex-direction: column;
     align-items: center;
   }
