--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body {
   padding: 10px;
 }
 
-.side fakeimg{
+.interesting-stuff{
   text-align: center;
 }
 .main {
@@ -214,7 +214,7 @@ margin: 5px;
   background-color: #EAE7DC; /* Make the text a subtle blue */
   color:#4B3F36;
   border-radius: 7px;
-  padding: 10px;
+  padding: 20px;
   text-align: justify;
 }
 
