--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
 }
@@ -40,12 +41,12 @@ body {
 }
 
 .header h3 {
-  color: #302822;
-  background-color: #eae7dcde;
+  color:#EAE7DC;
+  background-color:#6d5847c5;
   display: inline-block;
   border-radius: 5px;
   padding-inline: 10px;
-  font-weight: lighter
+  font-weight: bold
 ;
 }
 
@@ -184,12 +185,67 @@ body {
   background-color: #6A8D92; /* Mountain Blue */
   padding: 20px;
   color: #EAE7DC;
+  
 }
 
-.main > * {
-  flex-shrink: 2;
+.personal_border{
+  border: 3px solid #3028229a;
+  margin: 10px;
+  border-radius: 8px;
+}
+
+.personal_border a{
+  color: #4B3F36;
+}
+
+.personal_border a:hover {
+  color:#DAD7CD; /* Color when hovered over */
+}
+
+.personal_border a:visited {
+  color:#6A8D92; /* Color of visited links */
+}
+
+
+.div_personal{
+  text-align: center;
+  flex-direction: column;
+}
+
+.div_personal h2,h5{
+  display: inline-block;
 
 }
+
+.div_personal h2,h3 {
+  color: #EAE7DC; /* Make the text a subtle blue */
+  background-color:#6d58478f;
+  border-radius: 7px ;
+  padding: 10px;
+  margin: 20px;
+}
+
+.div_personal h5 {
+  color: #EAE7DC; /* Make the text a subtle blue */
+  background-color: #c79c2f7a;
+  padding: 10px;
+  border-radius: 7px;
+  margin: 20px;
+
+}
+
+.div_personal p {
+  opacity: 80%;
+  background-color: #EAE7DC; /* Make the text a subtle blue */
+  color:#4B3F36;
+  border: none;
+  border-radius: 7px;
+  padding: 20px;
+  margin: 20px;
+  text-align: justify;
+
+}
+
 
 .smallimg, .youtube-thumbnail {
   width: 100%;
@@ -217,30 +273,6 @@ margin: 5px;
   font-size: 15px;
 }
 
-.div_personal h2 {
-  position: relative;
-  padding-left: 20px; /* Space for the custom bullet */
-  color: #EAE7DC; /* Make the text a subtle blue */
-  background-color:#6d58478f;
-  display: inline-block;
-  border-radius: 7px ;
-  padding: 10px;
-}
-
-.div_personal h5 {
-  position: relative;
-  color: #EAE7DC; /* Make the text a subtle blue */
-
-}
-
-.div_personal p {
-  opacity: 80%;
-  background-color: #EAE7DC; /* Make the text a subtle blue */
-  color:#4B3F36;
-  border-radius: 7px;
-  padding: 20px;
-  text-align: justify;
-}
 
 
 
@@ -271,6 +303,7 @@ height: 100%;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /* Brown colored icons */
@@ -313,8 +346,8 @@ height: 100%;
 /* Media query for tablets and medium screens (max-width: 1000px) */
 @media (max-width: 900px) {
   .skill-logo {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
   }
   .skills-container {
     gap: 10px;
@@ -326,6 +359,14 @@ height: 100%;
   .row {
     flex-direction: column-reverse;
     
+  }
+
+  .header h1{
+    font-size: 25px;
+  }
+
+  .header h3{
+    font-size: 15px;
   }
   .buttons_bar{
     flex-direction: column;
