chore: chage amount of snapshot for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,10 @@ height: 100%;
     align-items: center; 
     text-align: center;
 
+
+    :root {
+      --snapshot-amount: 1;
+    }
   }
 
 }
