--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ height: 100%;
     flex-direction: column;
     align-items: center;
   }
-  .btn_personal{
+  .btn_personal,.btn_cv{
     display: flex;
     width: 100%;
     height: 100%;
