fix: correct div name

--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,7 @@ margin: 5px;
   margin-inline: 50px;
 }
 
-.cv, .de, .eng, .presskit {
+.div_cv, .de, .eng, .presskit {
 
 width: 100%;
 height: 100%;
